--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
-  get: ^4.6.6
   google_fonts: ^6.2.1
+  go_router: ^14.1.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
