--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,22 +29,23 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dio: ^5.4.3+1
+  equatable: any
   flutter:
     sdk: flutter
-  equatable: any
-  json_annotation: any
-  freezed_annotation: any
   font_awesome_flutter: ^10.7.0
-  google_fonts: ^6.2.1
+  freezed_annotation: any
   go_router: ^14.1.3
+  google_fonts: ^6.2.1
+  json_annotation: any
 
 dev_dependencies:
+  build_runner: any
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  json_serializable: any
-  build_runner: any
   freezed: any
+  json_serializable: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
