--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   equatable: any
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   font_awesome_flutter: ^10.7.0
-  freezed_annotation: any
   go_router: ^14.1.3
   google_fonts: ^6.2.1
   json_annotation: any
