--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^14.1.3
   google_fonts: ^6.2.1
   json_annotation: any
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   build_runner: any
